XP-261 The filtering does not work, when search text is entered a second time. - Fixed problem with text overlapping search icon

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/app/browse/browse-filter-panel.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/app/browse/browse-filter-panel.less
@@ -21,7 +21,7 @@
     background-repeat: no-repeat !important;
     background-position: right top !important;
     padding-right: 30px;
-    padding: 4px 9px;
+    padding: 4px 21px 4px 9px;
     height: 26px;
     border: 0;
     border-radius: 20px;
